feat: Criando a tabela de produtos e adicionando a autenticação básica

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "./database/database.sqlite3"
+    "storage": "./database/db.sqlite3"
   }
 }
