--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
